--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -66,7 +66,8 @@ h3,
 .meta_real_reviews_video_title_new,
 .innertitle_new,
 h2 span,
-.im8-savings-badge__amount {
+.im8-savings-badge__amount,
+.metafield-rich_text_field {
   font-family: "ABC Arizona Flare", serif;
 }
 .header-section .header-bar span,
@@ -382,6 +383,34 @@ h2 span,
   z-index: 1;
   pointer-events: none;
 }
+.hero-bg {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.slide_list {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  transition-timing-function: var(
+    --swiper-wrapper-transition-timing-function,
+    initial
+  );
+  box-sizing: content-box;
+}
+.slide_list.slick-initialized .slick-slide {
+  padding-right: 19px;
+  cursor: pointer;
+}
+@media screen and (min-width: 750px) {
+  .hero-bg {
+    background-image: url("../images/approvedby_bg.webp");
+  }
+}
 @media (min-width: 0px) and (max-width: 749px) {
   .mobile_image_new,
   .badge-footnote--mobile {
@@ -410,5 +439,8 @@ h2 span,
     top: 50%;
     left: 0;
     transform: translate(0, -50%);
+  }
+  .hero-bg {
+    background-image: url("../images/approvedby_mbg.webp");
   }
 }
