--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -422,6 +422,40 @@ h2 span,
   background: url(../images/bgdt.webp) no-repeat center center !important;
   background-size: cover !important;
 }
+.img-hover {
+  display: block;
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  opacity: 0;
+  transform: scale(1.2);
+  transition: all 0.3s;
+}
+.product-hov:hover .img-hover {
+  z-index: 3;
+  opacity: 1;
+  transform: scale(1);
+}
+.product-icon {
+  background-image: url(../images/whole_badge.svg);
+}
+.btn-cart {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 3;
+  opacity: 0;
+  transform: translateY(8px) scale(0.96);
+  transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+.product-hov:hover .btn-cart {
+  transform: translateY(0) scale(1);
+  opacity: 1;
+}
 @media screen and (min-width: 750px) {
   .hero-bg {
     background-image: url("../images/approvedby_bg.webp");
